@@ -12,6 +12,7 @@ version 0.56 (04/11/2002):
  	* Fixed broken signal handling in gdm-started GNOME sessions 
  	  (Thanks Jim Seymour, Vann, Robert McQueen)
 	* Oscar group syncronization (Thanks, Mark Doliner)
+	* ICQ Authorization via Oscar (Thanks, Mark Doliner)
 	
 version 0.55 (03/29/2002):
 	* Jabber improvements (Thanks Jim Seymour)
